# Human-Behavior-Classifier

./: README.md  main.py  pyproject.toml
project3/code/: RAD_HJPD_HOD_generation.py  __init__.py  hjpd_bin_qty.py  hjpd_c_val.py  hjpd_gamma_val.py  hod_bin_qty.py  hod_c_val.py  hod_gamma_val.py  rad_ang_bin_qty.py  rad_c_val.py  rad_dist_bin_qty.py  rad_gamma_val.py  train_test_model.py
project3/output_data/: bin_size_comparison.ods
project3/output_data/ra10_rd10_hj10_hd10/: hjpd_d2  hjpd_d2.out  hjpd_d2.t  hod_d2.out  hod_d2.t
project3/output_data/ra10_rd10_hj11_hd14/: hjpd_d2  hjpd_d2.out  rad_d2.out
project3/output_data/ra10_rd10_hj14_hd14/: hjpd_d2.out
project3/output_data/ra10_rd10_hj18_hd14/: hjpd_d2  hjpd_d2.t  hod_d2.out  rad_d2  rad_d2.t
project3/output_data/ra10_rd10_hj24_hd14/: hjpd_d2
project3/output_data/ra11_rd11_hj11_hd11/: hjpd_d2.t  hod_d2.out  hod_d2.t
project3/output_data/ra11_rd11_hj11_hd22/: hod_d2.out  rad_d2  rad_d2.out  rad_d2.t
project3/output_data/ra12_rd12_hj12_hd12/: hjpd_d2  hjpd_d2.out  hjpd_d2.t  hod_d2.out  rad_d2  rad_d2.out  rad_d2.t
project3/output_data/ra12_rd12_hj17_hd13/: hjpd_d2.out  hjpd_d2.t  hod_d2.out
project3/output_data/ra13_rd13_hj13_hd13/: hjpd_d2  hjpd_d2.out  hjpd_d2.t  rad_d2  rad_d2.out  rad_d2.t
project3/output_data/ra14_rd14_hj14_hd14/: hjpd_d2  hjpd_d2.t  rad_d2  rad_d2.out  rad_d2.t
project3/output_data/ra15_rd15_hj15_hd15/: hjpd_d2  hjpd_d2.out  hjpd_d2.t  hod_d2.out  rad_d2  rad_d2.out  rad_d2.t
project3/output_data/ra16_rd16_hj16_hd16/: hjpd_d2  hjpd_d2.out  hjpd_d2.t  hod_d2.out  rad_d2  (+2 more)
(+57 files in other folders)
