[tool.poetry]
name = "hcr-behavior-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
pandas = "^1.0.3"
numpy = "^1.18.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
